samples/_failures_safe/1761129630_9b9b9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7a6bc92.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_d7a6bc92.c:167:5: error: expected declaration or statement at end of input
  167 |     Parser parser;
      |     ^~~~~~
